# otel-demo

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  buf.gen.yaml  pyproject.toml  pyrightconfig.json  renovate.json  requirements.txt  run.py  setup.sh  start-dev.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cleanup-cache.yml  docker.yml  lint.yml
app/: __init__.py  config.py  extensions.py  telemetry.py
app/blueprints/: __init__.py  database.py  demo.py  distance.py  files.py  health.py  observability.py
app/proto/distance/v1/: distance_pb2.py  distance_pb2.pyi  distance_pb2_grpc.py
app/services/: __init__.py  database.py  distance_client.py  storage.py
docs/: DISTANCE_INTEGRATION_CHECKLIST.md  DISTANCE_INTEGRATION_PLAN.md  GRAFANA_DASHBOARD.md  VERSION_MANAGEMENT.md  authentication-plan.md  authentication-quickstart.md  grafana-dashboard.json  makefile-guide.md  multi-repo-implementation-plan.md  operations.md  phase-1-setup-instructions.md  phase-b6-m2m-implementation-plan.md
scripts/: check-version.sh  generate-spec-from-code.py  generate-types.sh  setup-branch-protection.sh  token_cli.py  update-version.sh
tests/: __init__.py  conftest.py  test_database_blueprint.py  test_database_service.py  test_demo.py  test_distance_blueprint.py  test_distance_client.py  test_files_blueprint.py  test_health.py  test_observability.py  test_storage_service.py
